--- a/files/style.css
+++ b/files/style.css
@@ -36,11 +36,11 @@ body{
     top: 0px;
     left: 0px;
     z-index: 1;
-    border-radius: 0px 0px 10px 0px;
-    -webkit-border-radius: 0px 0px 10px 0px;
-    -moz-border-radius: 0px 0px 10px 0px;
-    -ms-border-radius: 0px 0px 10px 0px;
-    -o-border-radius: 0px 0px 10px 0px;
+    border-radius: 0px 10px 10px 0px;
+    -webkit-border-radius: 0px 10px 10px 0px;
+    -moz-border-radius: 0px 10px 10px 0px;
+    -ms-border-radius: 0px 10px 10px 0px;
+    -o-border-radius: 0px 10px 10px 0px;
     transform: translateX(300px);
     -webkit-transform: translateX(300px);
     -moz-transform: translateX(300px);
@@ -64,7 +64,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
     padding: 10px 0px;
 }
 #show-list:hover{
@@ -115,7 +115,7 @@ body{
 }
 .list-item{
     width: 280px;
-    height: 50px;
+    height: 10vh;
     background: #fcb;
     border-radius: 8px;
     -webkit-border-radius: 8px;
@@ -598,3 +598,12 @@ body{
 #landing-page:focus, #skill-set-page:focus, #about-me-page:focus, #projects-page:focus, #contacts-page:focus, #footer:focus{
     outline: none;
 }
+
+
+
+
+
+
+
+
+
