--- a/files/styles/style.css
+++ b/files/styles/style.css
@@ -166,48 +166,6 @@ body{
     animation: hover-on 0.2s linear 0s 1 forwards;
     -webkit-animation: hover-on 0.2s linear 0s 1 forwards;
 }
-.arrow-down{
-    margin-right: 15px;
-    padding: 18px;
-    border: solid #111;
-    border-width: 0 8px 8px 0;
-    border-radius: 0px 0px 3px 0px;
-    -webkit-border-radius: 0px 0px 3px 0px;
-    -moz-border-radius: 0px 0px 3px 0px;
-    -ms-border-radius: 0px 0px 3px 0px;
-    -o-border-radius: 0px 0px 3px 0px;
-    transform: scale(103%) rotate(45deg);
-    -webkit-transform: scale(103%) rotate(45deg);
-    -moz-transform: scale(103%) rotate(45deg);
-    -ms-transform: scale(103%) rotate(45deg);
-    -o-transform: scale(103%) rotate(45deg);
-    box-shadow: #351b0770 4px 2px 6px;
-    cursor: pointer;
-    animation: arrow-no-hover 1s linear 0s 1 forwards;
-    -webkit-animation: arrow-no-hover 1s linear 0s 1 forwards;
-}
-.arrow-down:hover{
-    animation: arrow-hover 0.2s linear 0s 1 forwards;
-    -webkit-animation: arrow-hover 0.2s linear 0s 1 forwards;
-}
-@keyframes arrow-no-hover {
-    100%{
-        transform: scale(100%) rotate(45deg);
-        -webkit-transform: scale(100%) rotate(45deg);
-        -moz-transform: scale(100%) rotate(45deg);
-        -ms-transform: scale(100%) rotate(45deg);
-        -o-transform: scale(100%) rotate(45deg);
-    }
-}
-@keyframes arrow-hover {
-    100%{
-        transform: scale(105%) rotate(45deg);
-        -webkit-transform: scale(105%) rotate(45deg);
-        -moz-transform: scale(105%) rotate(45deg);
-        -ms-transform: scale(105%) rotate(45deg);
-        -o-transform: scale(105%) rotate(45deg);
-    }
-}
 #down img{
     width: 70px;
     filter: drop-shadow( 4px 4px 6px #20100470) invert(0.08);
@@ -224,14 +182,14 @@ body{
     animation: hover-on 0.1s linear 0s 1 forwards;
     -webkit-animation: hover-on 0.1s linear 0s 1 forwards;
 }
-#about-me-page{
+#paragraph-page{
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-#about-me-container{
+#paragraph-container{
     height: 75vh;
     width: 80vw;
     background-color: #ddc8;
@@ -244,7 +202,7 @@ body{
     padding: 20px;
     box-shadow: #b9641eaa 8px 8px 8px;
 }
-#about-me-title{
+#paragraph-title{
     height: 80px;
     display: flex;
     justify-content: center;
@@ -254,19 +212,19 @@ body{
     text-shadow: #95633bd9 2px 2px 4px;
     user-select: none;
 }
-#about-me{
+#paragraph{
     user-select: text;
     text-shadow: #95633bd9 2px 2px 4px;
     font-size: 30px;
 }
-#skill-set-page{
+#four-celled-page{
     height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-#skill-set-container{
+#four-celled-container{
     height: 75vh;
     width: 80vw;
     background-color: #ddc8;
@@ -279,7 +237,7 @@ body{
     padding: 20px;
     box-shadow: #b9641eaa 8px 8px 8px;
 }
-#skill-set-title{
+#four-celled-title{
     height: 80px;
     display: flex;
     justify-content: center;
@@ -289,7 +247,7 @@ body{
     text-shadow: #95633bd9 2px 2px 4px;
     user-select: none;
 }
-#skill-set{
+#four-celled{
     user-select: text;
     text-shadow: #95633bd9 2px 2px 4px;
     font-size: 35px;
@@ -299,7 +257,7 @@ body{
     grid-template-rows: 1fr 1fr;
     gap: 15px;
 }
-.skill{
+.four-celled-cell{
     padding: 10px;
     background-color: rgba(229, 220, 201, 0.831);
     border-radius: 8px;
@@ -321,40 +279,46 @@ body{
     -o-transform: scale(103%);
     overflow: hidden;
 }
-.skill:hover{
+.four-celled-cell:hover{
     animation: hover-on 0.1s linear 0s 1 forwards;
     -webkit-animation: hover-on 0.1s linear 0s 1 forwards;
 }
-.skill-image{
+.four-celled-cell-image{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 5px;
 }
-.skill-image img{
+.four-celled-cell-image img{
     width: 100%;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
-.skill-title{
+.four-celled-cell-title{
     font-size: 32px;
     display: flex;
     align-items: center;
 }
-.skill-details{
+.four-celled-cell-details{
     font-size: 25px;
     display: flex;
     grid-column: 1/3;
 }
-#projects-page{
+.six-celled-page{
     height: 100vh;
     width: 100%;
 }
-#projects-container{
+.six-celled-container{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
 }
-#projects{
+.six-celled{
     background-color: #ddc8;
     backdrop-filter: blur(2px);
     width: 80vw;
@@ -368,7 +332,7 @@ body{
     overflow: hidden;
     box-shadow: #b9641eaa 8px 8px 8px;
 }
-#top-projects-title{
+.six-celled-title{
     height: 80px;
     display: flex;
     justify-content: center;
@@ -378,7 +342,7 @@ body{
     text-shadow: #95633bd9 2px 2px 4px;
     user-select: none;
 }
-#projects-grid{
+.six-celled-grid{
     width: 100%;
     height: calc( 100% - 80px );
     display: grid;
@@ -386,7 +350,7 @@ body{
     grid-template-rows: 1fr 1fr;
     gap: 10px;
 }
-.project{
+.six-celled-cell{
     overflow: hidden;
     background-color: rgba(229, 220, 201, 0.831);
     padding: 5px;
@@ -407,17 +371,17 @@ body{
     -ms-transform: scale(103%);
     -o-transform: scale(103%);
 }
-.project:hover{
+.six-celled-cell:hover{
     animation: hover-on 0.1s linear 0s 1 forwards;
     -webkit-animation: hover-on 0.1s linear 0s 1 forwards;
 }
-.project-image-holder{
+.six-celled-cell-image-holder{
     height: calc(100% - 40px);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.project-image{
+.six-celled-cell-image{
     max-width: 100%;
     max-height: 100%;
     border-radius: 5px;
@@ -426,7 +390,7 @@ body{
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
 }
-.project-title{
+.six-celled-cell-title{
     height: 40px;
     font-size: 22px;
     display: flex;
@@ -443,94 +407,10 @@ body{
     align-items: center;
     overflow: hidden;
 }
-.project-link{
+.six-celled-cell-link{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-#contacts-page{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#contacts-container{
-    height: 75vh;
-    width: 80vw;
-    background-color: #ddc8;
-    backdrop-filter: blur(2px);
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    padding: 20px;
-    box-shadow: #b9641eaa 8px 8px 8px;
-}
-#contacts-title{
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    font-family: 'Nunito', sans-serif;
-    font-weight: bold;
-    font-size: 45px;
-    text-shadow: #95633bd9 2px 2px 4px;
-    user-select: none;
-}
-#contacts{
-    user-select: text;
-    text-shadow: #95633bd9 2px 2px 4px;
-    font-size: 35px;
-    height: calc( 100% - 80px );
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 15px;
-}
-.contact{
-    overflow-x: auto;
-    padding: 10px;
-    background-color: rgba(229, 220, 201, 0.831);
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
-    box-shadow: #7e675486 3px 3px 6px;
-    cursor: pointer;
-    display: grid;
-    grid-template-columns: 60px 1fr;
-    grid-template-rows: 1fr 1fr;
-    transform: scale(103%);
-    animation: hover-off 0.1s linear 0s 1 forwards;
-    -webkit-animation: hover-off 0.1s linear 0s 1 forwards;
-    -webkit-transform: scale(103%);
-    -moz-transform: scale(103%);
-    -ms-transform: scale(103%);
-    -o-transform: scale(103%);
-}
-.contact:hover{
-    animation: hover-on 0.1s linear 0s 1 forwards;
-    -webkit-animation: hover-on 0.1s linear 0s 1 forwards;
-}
-.contact-image{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.contact-image img{
-    width: 100%;
-}
-.contact-title{
-    font-size: 40px;
-    display: flex;
-    align-items: center;
-}
-.contact-details{
-    font-size: 25px;
-    display: flex;
-    grid-column: 1/3;
 }
 #footer{
     height: 150px;
@@ -585,17 +465,17 @@ body{
 
 @media only screen and ( max-aspect-ratio: 1/1 ) {
     /* checking if in portrait mode*/
-    #skill-set, #contacts{
+    #four-celled, #contacts{
         grid-template-columns: 1fr;
         grid-template-rows: repeat( 4, 1fr);
     }
-    #projects-grid{
+    .six-celled-grid{
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
     }
 }
 
-#landing-page:focus, #skill-set-page:focus, #about-me-page:focus, #projects-page:focus, #contacts-page:focus, #footer:focus{
+#landing-page:focus, #four-celled-page:focus, #paragraph-page:focus, .six-celled-page:focus, #contacts-page:focus, #footer:focus{
     outline: none;
 }
 
