--- a/files/styles/style.css
+++ b/files/styles/style.css
@@ -308,6 +308,31 @@ body{
     justify-content: center;
     align-items: center;
 }
+.image-page{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image-container{
+    background-color: #ddc8;
+    backdrop-filter: blur(2px);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    padding: 20px;
+    box-shadow: #20120631 8px 8px 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 95vw;
+}
+.image-container img{
+    height: 80vh;
+}
 .four-celled-container{
     height: 75vh;
     width: 80vw;
@@ -502,8 +527,7 @@ body{
     backdrop-filter: blur(3px);
     font-family: 'Nunito', sans-serif;
     text-align: center;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 22px;
     text-shadow: #351b0770 2px 2px 4px;
     user-select: none;
     display: flex;
@@ -522,7 +546,7 @@ body{
         -moz-transform: scale(103%);
         -ms-transform: scale(103%);
         -o-transform: scale(103%);
-}
+    }
     100%{
         transform: scale(100%);
         -webkit-transform: scale(100%);
